syntax = "proto3";
package v1;

message GetBalanceRequest {
    string account_id = 1;
}

message GetBalanceResponse {
    int64 balance = 1;
}

message UpdateBalanceCreditRequest {
    string account_id = 1;
    int64 amount = 2;
}

message UpdateBalanceCreditResponse {
    int64 balance = 1;
}

message UpdateBalanceDebitRequest {
    string account_id = 1;
    int64 amount = 2;
}

message UpdateBalanceDebitResponse {
    int64 balance = 1;
}

service BalanceService {
    rpc GetBalance(GetBalanceRequest) returns(GetBalanceResponse);
    rpc UpdateBalanceCredit(UpdateBalanceCreditRequest) returns(UpdateBalanceCreditResponse);
    rpc UpdateBalanceDebit(UpdateBalanceDebitRequest) returns(UpdateBalanceDebitResponse);
}